--- a/CUDA/8.0/Dockerfile
+++ b/CUDA/8.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:8.0
+FROM nvidia/cuda:8.0-devel-ubuntu16.04
 MAINTAINER Cristian Baldi "bld.cris.96@gmail.com"
 
 ENV DEBIAN_FRONTEND noninteractive
@@ -15,6 +15,14 @@ RUN apt-get -y install \
     libhdf5-dev \
     software-properties-common
 
+# Fix 'sudo: command not found'
+# https://github.com/torch/distro/blob/master/install-deps contains 'sudo', but nvidia:cuda removed sudo: https://github.com/crisbal/docker-torch-rnn/issues/9#issuecomment-365362656
+RUN apt-get -y install sudo
+RUN usermod -aG sudo $(whoami)
+
+# Fix torch installation ( https://github.com/torch/cutorch/issues/797 )
+ENV TORCH_NVCC_FLAGS='-D__CUDA_NO_HALF_OPERATORS__'
+
 # Torch and luarocks
 RUN git clone https://github.com/torch/distro.git /root/torch --recursive && cd /root/torch && \
     bash install-deps && \
@@ -29,8 +37,19 @@ ENV LUA_CPATH='/root/torch/install/lib/?.so;'$LUA_CPATH
 
 #torch-rnn and python requirements
 WORKDIR /root
-RUN git clone https://github.com/jcjohnson/torch-rnn && \
-    pip install -r torch-rnn/requirements.txt
+#RUN git clone https://github.com/jcjohnson/torch-rnn && \
+#    pip install -r torch-rnn/requirements.txt
+
+# Fix install torch-rnn requirements in Ubuntu 16.04
+# https://github.com/crisbal/docker-torch-rnn/issues/1#issuecomment-324262348
+RUN apt-get install -y cython
+RUN pip install --upgrade pip
+RUN pip install Cython==0.23.4
+RUN pip install numpy==1.10.4
+RUN pip install argparse==1.2.1
+RUN HDF5_DIR=/usr/lib/x86_64-linux-gnu/hdf5/serial/ pip install h5py==2.5.0
+RUN pip install six==1.10.0
+RUN git clone https://github.com/jcjohnson/torch-rnn
 
 #Lua requirements
 WORKDIR /root
